# cmf

./: .gitignore  Cargo.toml  README.md  config.toml  sortspec.md
.obsidian/: app.json  community-plugins.json
_build/: index.html
_notes/: index_alphabetical.md
app/: Cargo.toml
cms/: Cargo.toml
code/: CMakeLists.txt
code/c/_/: CMakeLists.txt
code/c/_/src/inc/: println.h
code/c/_/src/lib/: println.c
code/c/src/lib/: prelude.c
code/cc-winapi/: CMakeLists.txt
code/cc-winapi/src/inc/: basic.h
code/cc-winapi/src/inc/basic/: access.h  fn.h  init.h  type.h
code/cc-winapi/src/lib/: data_type.cc  winapi.cc
code/cc-winapi/src/lib/basic/data_type/: primitive.cc
code/cc-winapi/src/lib/data_type/: string.cc
code/cc-winapi/src/lib/winapi/: wininstance.cc
code/cc-xstr/: CMakeLists.txt
code/cc-xstr/src/inc/: prelude.h
code/cc-xstr/src/lib/: prelude.cc
code/cc/_/: CMakeLists.txt
code/cc/src/inc/: prelude.h
code/cc/src/lib/: iostream.cc  prelude.cc
code/cc/winapi/_/src/inc/basic/: text.h
code/cc/winapi/_/src/lib/: basic.cc  winapi.cc
code/cc/winapi/_/src/lib/basic/: optional.cc
code/cc/winapi/_/src/lib/basic/data_type/: string.cc
code/cc/winapi/_/src/lib/winapi/: wininstance.cc
code/html/: index.html
code/js/_/: main.js
code/r/_/: main.r
code/rs/: Cargo.toml
code/rs/game/guessing/_/: Cargo.toml
code/rs/guessing-game/: Cargo.toml
code/rs/guessing-game/src/lib/: lib.rs
code/rs/src/lib/: lib.rs
code/ts/: main.ts
dev/: Cargo.toml
docs/: _.md  en_us.md  ko_kr.md
net/: Cargo.toml
ssg/: Cargo.toml
sys/: Cargo.toml
(+96 files in other folders)
